--- a/GuiLabDPS/guia3/primerversion.html
+++ b/GuiLabDPS/guia3/primerversion.html
@@ -16,6 +16,6 @@ Algunos ejemplos de sistemas distribuidos, aparte de Git, son Mercurial, Bazaar 
 Darcs. En este tipo de herramientas, los clientes replican completamente el
 repositorio</P>
 
-<P>Rama de desarrollo</P>
+<P>Rama de pruebas</P>
 </BODY>
 </HTML>
